Fixed paragrapsh error where content was flowing out of the container which was found during final check

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ li {
 p {
   margin-bottom: 3rem;
   line-height: 1.6;
+  display: inline-block;
 }
 
 a {
@@ -90,4 +91,8 @@ textarea:focus {
 
 .noEntry {
   margin-top: 5rem;
+}
+
+.less-margin {
+  margin: 0;
 }
